--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>1507. ÁSzMCsCs</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
@@ -177,5 +178,6 @@
   <!-- JavaScript betöltése az interaktív funkciókhoz -->
   <script src="script.js"></script>
 </body>
+
 
 </html
