--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>1507. ÁSzMCsCs</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <title>1507. | ÁSzMCsCs</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
@@ -17,7 +17,7 @@
    <!-- Betöltési képernyő: cserkészliliom forgó animációval -->
    <div id="loading-screen">
      <div class="loading-content">
-       <img src="liliom.svg" alt="Cserkészliliom" class="loading-lily" />
+       <img src="/images/liliom.svg" alt="Cserkészliliom" class="loading-lily" />
      </div>
    </div>
 
@@ -29,7 +29,7 @@
          - Rövid szöveg mobil nézethez
     -->
     <div class="logo">
-      <img src="liliom.svg" alt="Cserkészliliom" class="svg-logo" />
+      <img src="/images/liliom.svg" alt="Cserkészliliom" class="svg-logo" />
       <span class="logo-text">
         1507. Árpádházi<br>Szent Margit <br>Cserkészcsapat
       </span>
@@ -147,7 +147,7 @@
     <div class="footer-content">
       <div class="footer-logo">
         <div class="footer-logo-content">
-          <img src="liliom.svg" alt="Csapat logó" class="footer-logo-img" />
+          <img src="/images/liliom.svg" alt="Csapat logó" class="footer-logo-img" />
           <span>1507. Árpádházi Szent Margit Cserkészcsapat</span>
         </div>
         <p class="footer-tagline">Fedezd fel a természetet velünk! Csatlakozz cserkészcsapatunkhoz.</p>
@@ -178,6 +178,5 @@
   <!-- JavaScript betöltése az interaktív funkciókhoz -->
   <script src="script.js"></script>
 </body>
-
 
 </html
